--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Investment.Domain</AssemblyName>
+        <RootNamespace>Investment.Domain</RootNamespace>
     </PropertyGroup>
 
 </Project>
