--- a/Infrastracture/Infrastracture.csproj
+++ b/Infrastracture/Infrastracture.csproj
@@ -4,6 +4,12 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Investment.Infrastructure</AssemblyName>
+        <RootNamespace>Investment.Infrastructure</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+    </ItemGroup>
 
 </Project>
