--- a/InvestmentCalculator/InvestmentCalculator.csproj
+++ b/InvestmentCalculator/InvestmentCalculator.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Investment.InvestmentCalculator</AssemblyName>
+        <RootNamespace>Investment.InvestmentCalculator</RootNamespace>
     </PropertyGroup>
 
 </Project>
