--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <AssemblyName>Investment.WebApi</AssemblyName>
+        <RootNamespace>Investment.WebApi</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Infrastracture\Infrastracture.csproj" />
+      <ProjectReference Include="..\InvestmentCalculator\InvestmentCalculator.csproj" />
+    </ItemGroup>
 
 </Project>
