--- a/Infrastracture/Infrastracture.csproj
+++ b/Infrastracture/Infrastracture.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Application\Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
+    </ItemGroup>
+
 </Project>
