Return 400 bad request when Name of Investment is not unique Setup the fluentValidation Setup pipeline for Validations

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -13,4 +13,9 @@
       <ProjectReference Include="..\InvestmentCalculator\InvestmentCalculator.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentAssertions.Web" Version="1.2.5" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    </ItemGroup>
+
 </Project>
