Create Investment calculator

--- a/InvestmentCalculator/InvestmentCalculator.csproj
+++ b/InvestmentCalculator/InvestmentCalculator.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>Investment.InvestmentCalculator</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+    </ItemGroup>
+
 </Project>
