--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
       <PackageReference Include="FluentAssertions.Web" Version="1.2.5" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
